frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: umami
spec:
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: ghcr.io/umami-software/umami:postgresql-v1.36.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 56Mi
