frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: umami
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: app
